# z-examples

./: Cargo.toml  README.md
data/: beliefs.json
examples/: agents_talking.rs  blackboard_pattern.rs  coalition_pattern.rs  cognitive_agent.rs  federation_pattern.rs  full_system.rs  hello_agent.rs  hierarchy_pattern.rs  holarchy_pattern.rs  market_pattern.rs  messaging.rs  supervised_agents.rs  swarm_pattern.rs  team_pattern.rs
src/: lib.rs
