[package]
name = "z-examples"
version = "0.1.0"
edition = "2021"
authors = ["zeroicai <devzeroicai@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Example applications demonstrating the zeroicai multi-agent framework"
repository = "https://github.com/ZeroicAI/z-examples"
keywords = ["agents", "multi-agent", "examples", "autonomous"]
publish = false

[dependencies]
z-core = { git = "https://github.com/ZeroicAI/z-core", branch = "main" }
z-messaging = { git = "https://github.com/ZeroicAI/z-messaging", branch = "main" }
z-cognition = { git = "https://github.com/ZeroicAI/z-cognition", branch = "main" }
z-patterns = { git = "https://github.com/ZeroicAI/z-patterns", branch = "main" }
z-runtime = { git = "https://github.com/ZeroicAI/z-runtime", branch = "main" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "hello_agent"
path = "examples/hello_agent.rs"

[[example]]
name = "messaging"
path = "examples/messaging.rs"

[[example]]
name = "agents_talking"
path = "examples/agents_talking.rs"

[[example]]
name = "supervised_agents"
path = "examples/supervised_agents.rs"

[[example]]
name = "cognitive_agent"
path = "examples/cognitive_agent.rs"

[[example]]
name = "full_system"
path = "examples/full_system.rs"

[[example]]
name = "team_pattern"
path = "examples/team_pattern.rs"

[[example]]
name = "hierarchy_pattern"
path = "examples/hierarchy_pattern.rs"

[[example]]
name = "swarm_pattern"
path = "examples/swarm_pattern.rs"

[[example]]
name = "coalition_pattern"
path = "examples/coalition_pattern.rs"

[[example]]
name = "market_pattern"
path = "examples/market_pattern.rs"

[[example]]
name = "federation_pattern"
path = "examples/federation_pattern.rs"

[[example]]
name = "holarchy_pattern"
path = "examples/holarchy_pattern.rs"

[[example]]
name = "blackboard_pattern"
path = "examples/blackboard_pattern.rs"
